--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -5,10 +5,10 @@
   <title>Explore</title>
   <!-- Sets initial viewport load and disables zooming  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../stylesheets/dist/bootstrap.css">
-  <link rel="stylesheet" href="../stylesheets/dist/slick.css"/>
-  <link rel="stylesheet" href="../stylesheets/dist/font-awesome.css"/>
-  <link rel="stylesheet" href="../stylesheets/site.css"/>
+  <link rel="stylesheet" href="/stylesheets/dist/bootstrap.css">
+  <link rel="stylesheet" href="/stylesheets/dist/slick.css"/>
+  <link rel="stylesheet" href="/stylesheets/dist/font-awesome.css"/>
+  <link rel="stylesheet" href="/stylesheets/site.css"/>
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" href="../stylesheets/dist/font-awesome-ie7.css"/>
@@ -29,7 +29,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="../../" class="navbar-brand">WeActivity</a>
+        <a href="/" class="navbar-brand">WeActivity</a>
       </div>
       <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
         <form class="navbar-form navbar-left" role="search">
@@ -40,20 +40,20 @@
         </form>
         <ul class="nav navbar-nav">
           <li>
-            <a href='index.html'>Home</a>
+            <a href='/index'>Home</a>
           </li>
           <li>
-            <a href='explore.html'>Explore</a>
+            <a href='/explore'>Explore</a>
           </li>
           <li>
-            <a href='try.html'>Try it!</a>
+            <a href='/try'>Try it!</a>
           </li>
           <li>
-            <a href="signin.html">
+            <a href="/signin">
               Signin<span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="signup.html">Sign Up!</a></li>
+              <li><a href="/signup">Sign Up!</a></li>
               <li><a href="#">Another action</a></li>
             </ul>
           </li>
@@ -73,7 +73,7 @@
             <div class="content">
               <div class="header">
                 <a href="">
-                  <img class="photo" src="../image/thumbnail.jpg" alt="not found"/>
+                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
                   <strong class="title">Title</strong>
                 </a>
               </div>
@@ -99,34 +99,7 @@
             <div class="content">
               <div class="header">
                 <a href="">
-                  <img class="photo" src="../image/thumbnail.jpg" alt="not found"/>
-                  <strong class="title">Title</strong>
-                </a>
-              </div>
-              <div class="description">
-                <p>descriptiondescriptiondescriptiondescriptiondescription</p>
-              </div>
-              <div class="item-footer">
-                <ul>
-                  <li><a href="">test</a></li>
-                  <li><a href="">test</a></li>
-                </ul>
-              </div>
-            </div>
-
-          </div>
-        </li>
-
-        <li class="search-list-item">
-          <div class="activity-item">
-            <div class="time-card">
-              <div class="date">2014/01/01</div>
-              <div class="time">00:00:00</div>
-            </div>
-            <div class="content">
-              <div class="header">
-                <a href="">
-                  <img class="photo" src="../image/thumbnail.jpg" alt="not found"/>
+                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
                   <strong class="title">Title</strong>
                 </a>
               </div>
@@ -153,7 +126,34 @@
             <div class="content">
               <div class="header">
                 <a href="">
-                  <img class="photo" src="../image/thumbnail.jpg" alt="not found"/>
+                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
+                  <strong class="title">Title</strong>
+                </a>
+              </div>
+              <div class="description">
+                <p>descriptiondescriptiondescriptiondescriptiondescription</p>
+              </div>
+              <div class="item-footer">
+                <ul>
+                  <li><a href="">test</a></li>
+                  <li><a href="">test</a></li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+        </li>
+
+        <li class="search-list-item">
+          <div class="activity-item">
+            <div class="time-card">
+              <div class="date">2014/01/01</div>
+              <div class="time">00:00:00</div>
+            </div>
+            <div class="content">
+              <div class="header">
+                <a href="">
+                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
                   <strong class="title">Title</strong>
                 </a>
               </div>
@@ -203,8 +203,8 @@
   </div>
 </div>
 
-<script src="../javascripts/jquery-1.11.0.min.js"></script>
-<script src="../javascripts/bootstrap.min.js"></script>
-<script src="../javascripts/site.js"></script>
+<script src="/javascripts/jquery-1.11.0.min.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
+<script src="/javascripts/site.js"></script>
 </body>
 </html>
