refine for layouts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,24 +133,7 @@
   </div>
 </div>
 
-<div class="footer">
-  <div class="container">
-    <div class="logo">
-      WeActivity
-    </div>
-    <div class="links">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
-      </ul>
-    </div>
-    <div class="copyright">
-      Copyright © 2014 PotatoNi. All rights reserved.
-    </div>
-  </div>
-</div>
-
+<% include layouts/footer %>
 
 <script src="/javascripts/jquery-1.11.0.min.js"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
