refine and add mongoose

--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -32,7 +32,7 @@
             <div class="content">
               <div class="header">
                 <a href="">
-                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
+                  <img class="photo" src="/images/thumbnail.jpg" alt="not found"/>
                   <strong class="title">Title</strong>
                 </a>
               </div>
@@ -58,34 +58,7 @@
             <div class="content">
               <div class="header">
                 <a href="">
-                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
-                  <strong class="title">Title</strong>
-                </a>
-              </div>
-              <div class="description">
-                <p>descriptiondescriptiondescriptiondescriptiondescription</p>
-              </div>
-              <div class="item-footer">
-                <ul>
-                  <li><a href="">test</a></li>
-                  <li><a href="">test</a></li>
-                </ul>
-              </div>
-            </div>
-
-          </div>
-        </li>
-
-        <li class="search-list-item">
-          <div class="activity-item">
-            <div class="time-card">
-              <div class="date">2014/01/01</div>
-              <div class="time">00:00:00</div>
-            </div>
-            <div class="content">
-              <div class="header">
-                <a href="">
-                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
+                  <img class="photo" src="/images/thumbnail.jpg" alt="not found"/>
                   <strong class="title">Title</strong>
                 </a>
               </div>
@@ -112,7 +85,34 @@
             <div class="content">
               <div class="header">
                 <a href="">
-                  <img class="photo" src="/image/thumbnail.jpg" alt="not found"/>
+                  <img class="photo" src="/images/thumbnail.jpg" alt="not found"/>
+                  <strong class="title">Title</strong>
+                </a>
+              </div>
+              <div class="description">
+                <p>descriptiondescriptiondescriptiondescriptiondescription</p>
+              </div>
+              <div class="item-footer">
+                <ul>
+                  <li><a href="">test</a></li>
+                  <li><a href="">test</a></li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+        </li>
+
+        <li class="search-list-item">
+          <div class="activity-item">
+            <div class="time-card">
+              <div class="date">2014/01/01</div>
+              <div class="time">00:00:00</div>
+            </div>
+            <div class="content">
+              <div class="header">
+                <a href="">
+                  <img class="photo" src="/images/thumbnail.jpg" alt="not found"/>
                   <strong class="title">Title</strong>
                 </a>
               </div>
