--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
   <div class="container">
     <ul class="intro-list">
       <li class="intro-item">
-        <div class="intro-photo"><img src="/image/Jumbotron.jpg"></div>
+        <div class="intro-photo"><img src="/images/Jumbotron.jpg"></div>
         <div class="intro-contents">
           <h1>Implementing the HTML and CSS into your user interface project</h1>
 
@@ -94,7 +94,7 @@
         </div>
       </li>
       <li class="intro-item">
-        <div class="intro-photo"><img src="/image/Jumbotron.jpg"></div>
+        <div class="intro-photo"><img src="/images/Jumbotron.jpg"></div>
         <div class="intro-contents">
           <h1>Implementing the HTML and CSS into your user interface project</h1>
 
@@ -112,7 +112,7 @@
         </div>
       </li>
       <li class="intro-item">
-        <div class="intro-photo"><img src="/image/Jumbotron.jpg"></div>
+        <div class="intro-photo"><img src="/images/Jumbotron.jpg"></div>
         <div class="intro-contents">
           <h1>Implementing the HTML and CSS into your user interface project</h1>
 
