refine and finish basic signup function

--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -29,18 +29,18 @@
         </div>
       </div>
       <div class="content">
-        <form class="form-horizontal" method="post" action="">
+        <form class="form-horizontal" method="post" action="/users">
           <div class="form-group">
             <label class="control-label">Username:</label>
               <input type="text" name="username" class="form-control" placeholder="Username"/>
           </div>
           <div class="form-group">
             <label class="control-label">Password:</label>
-            <input type="text" class="form-control" placeholder="Password"/>
+            <input type="text" name="password" class="form-control" placeholder="Password"/>
           </div>
           <div class="form-group">
             <label class="control-label">E-mail:</label>
-            <input type="text" class="form-control" placeholder="address@exmaple.com"/>
+            <input type="text" name="email" class="form-control" placeholder="address@exmaple.com"/>
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-warning" value="Sign up"/>
