finish basic login auth

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -49,7 +49,7 @@
               <a href='/try'>Try it!</a>
             </li>
             <li>
-              <a href="/signin">
+              <a href="/login">
                 Signin<span class="caret"></span>
               </a>
               <ul class="dropdown-menu" role="menu">
