--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -28,7 +28,7 @@
         <a href='/try'>Try it!</a>
         </li>
         <li>
-        <a href="/signin">
+        <a href="/login">
           Signin<span class="caret"></span>
         </a>
         <ul class="dropdown-menu" role="menu">
