--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="content">
-        <form method="post" action="">
+        <form method="post" action="/users/session">
           <div class="input-group">
             <span class="input-group-addon">
               <i class="icon-user"></i>
