add simple file upload by ajax

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -46,7 +46,7 @@
               <a href='/explore'>Explore</a>
             </li>
             <li>
-              <a href='/try'>Try it!</a>
+              <a href='/tryit'>Try it!</a>
             </li>
             <li>
               <a href="/login">
