--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -25,7 +25,7 @@
         <a href='/explore'>Explore</a>
         </li>
         <li>
-        <a href='/try'>Try it!</a>
+        <a href='/tryit'>Try it!</a>
         </li>
         <li>
         <a href="/login">
