--- a/app/views/tryit.ejs
+++ b/app/views/tryit.ejs
@@ -25,7 +25,10 @@
     <ul class="steps">
       <li id="one" class="step">
         <p>First Step, Upload Your Slides</p>
-        <input type="file" class="btn-default"/>
+        <input id="fileupload" class="btn-default" type="file" name="files[]" data-url="tryit/new" multiple>
+        <div id="progress">
+          <div class="bar" style="width: 0%;height: 18px;background: green;"></div>
+        </div>
       </li>
       <li id="two" class="step">
         <p>Second Step, Enter into Controlling Page:</p>
@@ -44,8 +47,31 @@
 
 <% include layouts/footer %>
 
-<script src="/javascripts/jquery-1.11.0.min.js"></script>
-<script src="/javascripts/bootstrap.min.js"></script>
-<script src="/javascripts/site.js"></script>
+<script src="javascripts/jquery-1.11.0.min.js"></script>
+<script src="javascripts/bootstrap.min.js"></script>
+<script src="javascripts/site.js"></script>
+<script src="javascripts/vendor/jquery.ui.widget.js"></script>
+<script src="javascripts/jquery.iframe-transport.js"></script>
+<script src="javascripts/jquery.fileupload.js"></script>
+<script>
+  $(function () {
+      $('#fileupload').fileupload({
+          dataType: 'json',
+          done: function (e, data) {
+              $.each(data.result.files, function (index, file) {
+                  $('<p/>').text(file.name).appendTo(document.body);
+              });
+          },
+          progressall: function (e, data) {
+            var progress = parseInt(data.loaded / data.total * 100, 10);
+            $('#progress .bar').css(
+              'width',
+              progress + '%'
+            );
+          }
+      });
+  })
+</script>
+
 </body>
 </html>
