Finish basic try it page.

--- a/public/sass/_layout.scss
+++ b/public/sass/_layout.scss
@@ -19,7 +19,7 @@ $footer-height: 100px;
 
 /* footer */
 .footer {
-  background: #434a54;
+  background: #6f6f6f;
   color: #ffffff;
   padding-top: 20px;
   height: $footer-height;
