--- a/public/sass/_preset.scss
+++ b/public/sass/_preset.scss
@@ -7,7 +7,8 @@ html, body {
 }
 
 body {
-  background: #efeee4;
+  background: #f1f1f1;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 div, ul, li {
