--- a/public/sass/_steps.scss
+++ b/public/sass/_steps.scss
@@ -5,12 +5,87 @@
 $step-padding: 25%;
 $step-padding-767: 60%;
 
-.steps {
+.steps-header {
+  text-align: center;
+  line-height: 40px;
   font-size: 30px;
+  color: #bbbbbb;
+}
+
+.steps {
+  width: 70%;
+  margin: 20px auto;
 
   .step {
     background: #ffffff;
-    margin: 5px;
-    min-height: 100%;
+    height: 500%;
+    text-align: center;
+    margin: 10px 0;
+    padding-bottom: 10px;
+
+    .thumbnail {
+      width: 320px;
+      max-height: 320px;
+      overflow: hidden;
+      padding: 0;
+      margin: 10px auto;
+      border: 0;
+    }
+
+    .header {
+      font-size: 40px;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    .content {
+      button {
+        display: block;
+        margin: 10px auto;
+      }
+
+      .dropzone {
+        width: 400px;
+        height: 200px;
+        font-size: 30px;
+        color: #bfbfbf;
+        padding-top: 10px;
+        margin: 0 auto;
+
+        span {
+          word-break: break-all;
+        }
+      }
+
+      .dropzone-normal {
+        border: 2px dashed #bbbbbb;
+      }
+
+      .dropzone-error {
+        border: 2px dashed #cc3333;
+      }
+
+      .share-link {
+        width: 400px;
+        font-size: 20px;
+        margin: 10px auto;
+        word-break: break-all;
+      }
+    }
+
+    .mask {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      z-index: 2;
+      padding: 0 20%;
+
+      .message {
+        top: 45%;
+      }
+    }
   }
 }
