--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,5 +1,8 @@
 script(src="/js/jquery-1.11.0.min.js")
 script(src="/js/bootstrap.min.js")
 script(src="/js/slick.js")
+script(src="/js/vendor/jquery.ui.widget.js")
+script(src="/js/jquery.iframe-transport.js")
+script(src="/js/jquery.fileupload.js")
 script(src="/js/site.js")
 
