--- a/public/css/site.css
+++ b/public/css/site.css
@@ -444,51 +444,48 @@ div, ul, li {
 /**
  * Created by van on 14-4-20.
  */
-/* line 5, ../sass/_list.scss */
-.search-list {
+/* line 6, ../sass/_activity_list.scss */
+.activity-list {
   width: 100%;
 }
-/* line 8, ../sass/_list.scss */
-.search-list .search-list-item {
-  width: 50%;
+/* line 9, ../sass/_activity_list.scss */
+.activity-list .activity-list-item {
+  width: 33.333%;
   float: left;
 }
 
-/**
- * Created by van on 14-4-20.
- */
-/* line 10, ../sass/_activity_item.scss */
+/* line 19, ../sass/_activity_list.scss */
 .activity-item {
   padding: 10px;
   margin: 0 5px 5px 5px;
   background: #ffffff;
 }
-/* line 15, ../sass/_activity_item.scss */
+/* line 24, ../sass/_activity_list.scss */
 .activity-item:hover {
   cursor: pointer;
   background: #eeeeee;
 }
-/* line 20, ../sass/_activity_item.scss */
+/* line 29, ../sass/_activity_list.scss */
 .activity-item .content {
   margin-left: 70px;
   margin-right: 80px;
 }
-/* line 27, ../sass/_activity_item.scss */
+/* line 36, ../sass/_activity_list.scss */
 .activity-item .content .header .photo {
   float: left;
   max-width: 60px;
   max-height: 60px;
   margin-left: -70px;
 }
-/* line 35, ../sass/_activity_item.scss */
+/* line 44, ../sass/_activity_list.scss */
 .activity-item .content .description {
   word-wrap: break-word;
 }
-/* line 39, ../sass/_activity_item.scss */
+/* line 48, ../sass/_activity_list.scss */
 .activity-item .content .item-footer {
   padding-top: 10px;
 }
-/* line 42, ../sass/_activity_item.scss */
+/* line 51, ../sass/_activity_list.scss */
 .activity-item .content .item-footer ul li {
   display: -moz-inline-stack;
   display: inline-block;
@@ -497,7 +494,7 @@ div, ul, li {
   zoom: 1;
   *display: inline;
 }
-/* line 49, ../sass/_activity_item.scss */
+/* line 58, ../sass/_activity_list.scss */
 .activity-item .time-card {
   float: right;
   width: 80px;
@@ -505,12 +502,12 @@ div, ul, li {
   font-size: 12px;
 }
 
-/* line 86, ../sass/site.scss */
+/* line 85, ../sass/site.scss */
 .search-container {
   overflow: auto;
 }
 
-/* line 90, ../sass/site.scss */
+/* line 89, ../sass/site.scss */
 .pages {
   text-align: center;
 }
