Change file upload to upload after changed

--- a/app/views/home/explore.jade
+++ b/app/views/home/explore.jade
@@ -4,4 +4,7 @@ block main
   #content.container
     ul.activity-list
       li.activity-list-item
+        .activity-content
+          img(src='')
+        .activity-footer
 
