Finish new version of homepage. Need to change the picture of homepage. May need to improve style on steps.

--- a/app/views/home/explore.jade
+++ b/app/views/home/explore.jade
@@ -2,9 +2,51 @@ extends ../layouts/default
 
 block main
   #content.container
-    ul.activity-list
-      li.activity-list-item
-        .activity-content
-          img(src='')
-        .activity-footer
-
+    ul#activity-list.activity-list
+      li.list-item
+        .activity
+          a.shot(href='#')
+            img.photo(src='./img/Jumbotron.jpg')
+            .item-description
+              .item-title title
+              .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
+          ul.toolbar
+            li This is toolbar part
+        .item-footer
+          a.publisher(href='#') testuser
+      li.list-item
+        .activity
+          a.shot(href='#')
+            img.photo(src='./img/Jumbotron.jpg')
+            .item-description
+              .item-title title
+              .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
+          ul.toolbar
+            li This is toolbar part
+        .item-footer
+          a.publisher(href='#') testuser
+      li.list-item
+        .activity
+          a.shot(href='#')
+            img.photo(src='./img/Jumbotron.jpg')
+            .item-description
+              .item-title title
+              .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
+          ul.toolbar
+            li This is toolbar part
+        .item-footer
+          a.publisher(href='#') testuser
+      li.list-item
+        .activity
+          a.shot(href='#')
+            img.photo(src='./img/Jumbotron.jpg')
+            .item-description
+              .item-title title
+              .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
+          ul.toolbar
+            li This is toolbar part
+        .item-footer
+          a.publisher(href='#') testuser
+  .pagination
+    a.btn-prev(href='#')
+    a.btn-next(href='#')
