--- a/public/sass/_layout.scss
+++ b/public/sass/_layout.scss
@@ -11,13 +11,13 @@ $footer-height: 100px;
   padding-bottom: $footer-height;
 }
 
-/* content */
+// content
 #content {
   padding-top: 60px;
   margin-bottom: 10px;
 }
 
-/* footer */
+// footer
 .footer {
   background: #6f6f6f;
   color: #ffffff;
