--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,102 +1,65 @@
 doctype html
 html(lang="en")
   include ../includes/head
-  body
-    #wrap
-      header.navbar.navbar-transparent.navbar-absolute-top.bs-docs-nav(role='banner')
-        .container
-          .navbar-inner
-            .navbar-header
-              button.navbar-toggle(type='button', data-toggle='collapse', data-target='.bs-navbar-collapse')
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-              a.navbar-brand(href='/') WeActivity
-            nav.collapse.navbar-collapse.bs-navbar-collapse.navbar-right(role='navigation')
-              form.navbar-form.navbar-left(role='search')
-                .form-group.search-only
-                  i.search-icon.icon-search
-                  input.form-control(type='text', placeholder='Search')
-              ul.nav.navbar-nav
-                li
-                  a(href='/') Home
-                li
-                  a(href='/explore') Explore
-                li
-                  a(href='/tryit') Try it!
-                li
-                  a(href='/login')
-                    | Signin
-                    span.caret
-                  ul.dropdown-menu(role='menu')
-                    li
-                      a(href='/signup') Sign Up!
-                    li
-                      a(href='#') Another action
-      #main
-        .full-width-slider
-          .slider.single-item
-            .slide-1
-            .slide-2
-      .push
+  body.background
+    header.navbar.navbar-transparent.navbar-absolute-top.bs-docs-nav(role='banner')
       .container
-        ul.intro-list
-          li.intro-item
-            .intro-photo
-              img(src='/img/Jumbotron.jpg')
-            .intro-contents
-              h1 Implementing the HTML and CSS into your user interface project
-              h2 HTML Structure
-              p
-                | This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-                | featured
-                | content or information.
-              h2 CSS Structure
-              p
-                | This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-                | featured
-                | content or information.
-          li.intro-item
-            .intro-photo
-              img(src='/img/Jumbotron.jpg')
-            .intro-contents
-              h1 Implementing the HTML and CSS into your user interface project
-              h2 HTML Structure
-              p
-                | This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-                | featured
-                | content or information.
-              h2 CSS Structure
-              p
-                | This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-                | featured
-                | content or information.
-          li.intro-item
-            .intro-photo
-              img(src='/img/Jumbotron.jpg')
-            .intro-contents
-              h1 Implementing the HTML and CSS into your user interface project
-              h2 HTML Structure
-              p
-                | This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-                | featured
-                | content or information.
-              h2 CSS Structure
-              p
-                | This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-                | featured
-                | content or information.
-
-    include ../includes/footer
-    include ../includes/foot
-
-    script.
-      $('.single-item').slick({
-        dots: true,
-          responsive: {
-            settings: {
-              dots: true
-            }
-          }
-      });
+        .navbar-inner
+          .navbar-header
+            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.bs-navbar-collapse')
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            a.navbar-brand(href='/') WeActivity
+          ul.nav.navbar-nav.navbar-right
+            li
+              a(href='/explore') EXPLORE
+            li
+              a(href='/tryit') TRY IT
+            li
+              a(href='/login') SIGN IN
+            li
+              a(href='/signup') JOIN US
+    .container
+      .introduction.col-md-5
+        .title
+          h1 A better web starts
+          h2 with your activity
+        .description
+        button#btn-get-start.btn-get-start GET STARTED
+      .intro-photo.col-md-7
+        img(src='img/Jumbotron.jpg')
+    #steps-panel.steps-panel.hidden
+      ul.steps
+        li#step-upload.step.hidden
+          a.headbar
+            span.glyphicon.glyphicon-chevron-left back
+          .header Publish Your Slides
+          .content
+            input#input-select-file.hidden(type="file", data-url="/tryit/new", name="slide")
+            #dropzone.dropzone.dropzone-normal
+              span Drop Your File Here!
+              button#btn-select-file.btn.btn-primary.btn-lg Select a file
+          #mask.mask.hidden
+            .message
+              .progress.progress-striped.active
+                .progress-bar(role='progressbar', aria-valuenow='45', aria-valuemin='0', aria-valuemax='100', style='width: 100%') Uploading
+        li#step-controlling-page.step.hidden
+          a.headbar
+            span.glyphicon.glyphicon-chevron-left back
+          .header Go to Your Controlling Page
+          .content
+            .thumbnail
+              img(src='/img/slide-thumbnail-example.jpg')
+            a#btn-control.btn.btn-info.btn-lg(href='#') Go Control!
+        li#step-share.step.hidden
+          a.headbar
+            span.glyphicon.glyphicon-chevron-left back
+          .header Share to Your Audience
+          .content
+            .thumbnail
+              img(src='/img/QRCode.jpg')
+            .share-link Link:
+              a(href='#') http://fakeurl.to.slides
+  include ../includes/foot
