--- a/public/sass/_steps.scss
+++ b/public/sass/_steps.scss
@@ -2,90 +2,109 @@
  * Created by van on 14-4-21.
  */
 
-$step-padding: 25%;
-$step-padding-767: 60%;
+.steps-panel {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 0 30%;
 
-.steps-header {
-  text-align: center;
-  line-height: 40px;
-  font-size: 30px;
-  color: #bbbbbb;
-}
-
-.steps {
-  width: 70%;
-  margin: 20px auto;
-
-  .step {
-    background: #ffffff;
-    height: 500%;
+  .steps-header {
     text-align: center;
-    margin: 10px 0;
-    padding-bottom: 10px;
+    line-height: 40px;
+    font-size: 30px;
+    color: #bbbbbb;
+  }
 
-    .thumbnail {
-      width: 320px;
-      max-height: 320px;
-      overflow: hidden;
-      padding: 0;
-      margin: 10px auto;
-      border: 0;
-    }
+  .steps {
+    margin: 15% auto 0 auto;
+    height: 600px;
 
-    .header {
-      font-size: 40px;
-      padding: 20px 0;
+    .step {
+      background: #ffffff;
+      height: 70%;
       text-align: center;
-    }
+      margin-bottom: 20px;
 
-    .content {
-      button {
-        display: block;
+      .thumbnail {
+        width: 240px;
+        height: 240px;
+        overflow: hidden;
+        padding: 0;
         margin: 10px auto;
+        border: 0;
+
+        img {
+          width: 240px;
+          height: 240px;
+        }
       }
 
-      .dropzone {
-        width: 400px;
-        height: 200px;
-        font-size: 30px;
-        color: #bfbfbf;
-        padding-top: 10px;
-        margin: 0 auto;
+      .headbar {
+        display: block;
+        padding: 5px;
+        text-align: left;
+      }
 
-        span {
+      .header {
+        line-height: 40px;
+        font-size: 32px;
+        padding-bottom: 10px;
+        text-align: center;
+      }
+
+      .content {
+        height: 100%;
+
+        button {
+          display: block;
+          margin: 10px auto;
+        }
+
+        .dropzone {
+          width: 400px;
+          height: 75%;
+          margin: 0 auto;
+          font-size: 30px;
+          color: #bfbfbf;
+
+          span {
+            word-break: break-all;
+          }
+        }
+
+        .dropzone-normal {
+          border: 2px dashed #bbbbbb;
+        }
+
+        .dropzone-error {
+          border: 2px dashed #cc3333;
+        }
+
+        .share-link {
+          width: 400px;
+          font-size: 20px;
+          margin: 10px auto;
           word-break: break-all;
         }
       }
 
-      .dropzone-normal {
-        border: 2px dashed #bbbbbb;
-      }
+      .mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.8);
+        z-index: 2;
+        padding: 0 20%;
 
-      .dropzone-error {
-        border: 2px dashed #cc3333;
-      }
-
-      .share-link {
-        width: 400px;
-        font-size: 20px;
-        margin: 10px auto;
-        word-break: break-all;
-      }
-    }
-
-    .mask {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.8);
-      z-index: 2;
-      padding: 0 20%;
-
-      .message {
-        top: 45%;
+        .message {
+          top: 45%;
+        }
       }
     }
   }
 }
+
