--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -17,10 +17,22 @@ html(lang="en")
               a(href='/explore') EXPLORE
             li
               a(href='/tryit') TRY IT
+            // before sign in
             li
               a(href='/login') SIGN IN
             li
               a(href='/signup') JOIN US
+            // after sign in
+            li
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                | MyUsername
+                b.caret
+              ul.dropdown-menu
+                li
+                  a(href='#') Profile
+                li.divider
+                li
+                  a(href='#') Logout
     .container
       .introduction.col-md-5
         .title
@@ -33,8 +45,9 @@ html(lang="en")
     #steps-panel.steps-panel.hidden
       ul.steps
         li#step-upload.step.hidden
-          a.headbar
-            span.glyphicon.glyphicon-chevron-left back
+          div.headbar
+            a.btn-close
+              span x
           .header Publish Your Slides
           .content
             input#input-select-file.hidden(type="file", data-url="/tryit/new", name="slide")
@@ -43,23 +56,32 @@ html(lang="en")
               button#btn-select-file.btn.btn-primary.btn-lg Select a file
           #mask.mask.hidden
             .message
+              span#message Uploading
               .progress.progress-striped.active
-                .progress-bar(role='progressbar', aria-valuenow='45', aria-valuemin='0', aria-valuemax='100', style='width: 100%') Uploading
+                .progress-bar(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100')
         li#step-controlling-page.step.hidden
-          a.headbar
-            span.glyphicon.glyphicon-chevron-left back
+          div.headbar
+            a.btn-back
+              span.glyphicon.glyphicon-chevron-up back
+            a.btn-close
+              span x
           .header Go to Your Controlling Page
           .content
             .thumbnail
               img(src='/img/slide-thumbnail-example.jpg')
             a#btn-control.btn.btn-info.btn-lg(href='#') Go Control!
         li#step-share.step.hidden
-          a.headbar
-            span.glyphicon.glyphicon-chevron-left back
+          div.headbar
+            a.btn-back
+              span.glyphicon.glyphicon-chevron-up back
+            a.btn-close
+              span x
           .header Share to Your Audience
           .content
             .thumbnail
               img(src='/img/QRCode.jpg')
-            .share-link Link:
-              a(href='#') http://fakeurl.to.slides
+            .share-link
+              span Link:
+              a(href='#')
+            a.btn.bg-info(href='/signup') Like it? Join us!
   include ../includes/foot
